# KPI_Anomaly_Detection

./: .gitignore  README.md  pyproject.toml
legacy/: TimeSeries_original.py  load_functions_original.py  main_original.py  sliding_window_functions_original.py
scripts/: train.py
src/kpi_ad/: __init__.py  data.py  model.py  windows.py
src/kpi_ad.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_intervals.py
