[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpi-ad"
version = "0.1.0"
description = "KPI anomaly detection with sliding windows"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
